# stm32hello

./: CMakeLists.txt  init.cpp  main.cpp  pinmap.txt  stm32h5xx_it.c  stm32h5xx_nucleo_conf.h  toolchain-arm-none-eabi-clang.cmake
STM32Cube_FW_H5_V1.1.0/: Package_license.html  Package_license.md
STM32Cube_FW_H5_V1.1.0/Drivers/BSP/Components/mx25lm51245g/: Release_Notes.md
STM32Cube_FW_H5_V1.1.0/Drivers/BSP/Components/tcpp0203/: Release_Notes.md
STM32Cube_FW_H5_V1.1.0/Middlewares/ST/OpenBootloader/: Release_Notes.md
STM32Cube_FW_H5_V1.1.0/Middlewares/ST/secure_manager_api/: Release_Notes.md
STM32Cube_FW_H5_V1.1.0/Middlewares/ST/secure_manager_api/common_module/inc/: uk_app.h  uk_config_features.h  uk_config_hw_mcu_device.h  uk_config_options.h  uk_config_options_hw_mcu_core_arm_cmx.h  uk_config_options_hw_mcu_device.h  uk_config_options_hw_mcu_family_stm_stm32h5xx.h  uk_constants.h  uk_hw_mcu_core_arm_cmx.h  uk_hw_mcu_device.h  uk_hw_mcu_family_stm_stm32h5xx.h  uk_release.h  uk_services.h
STM32Cube_FW_H5_V1.1.0/Middlewares/ST/secure_manager_api/common_module/src/: uk_app.c  uk_hw_mcu_core_arm_cmx.c
STM32Cube_FW_H5_V1.1.0/Middlewares/ST/secure_manager_api/interface/inc/: tfm_fwu_defs.h
STM32Cube_FW_H5_V1.1.0/Middlewares/ST/secure_manager_api/interface/src/: check_parameters.c  psa_its.c  tfm_crypto_secure_api.c
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Applications/ROT/SMAK_Appli/: README.md  env.bat  prebuild.bat  readme.html
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Binary/: STM32CubeH5_Demo_STM32H573I-DK_V1.0.2.hex
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Config/: k_config.h
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Demo/: README.md  readme.html
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Demo/EWARM/: Demo.ewp
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Demo/Inc/: app_threadx.h  main.h  mx25lm51245g_conf.h  resources.h  stm32h573i_discovery_conf.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  tracer_emb_conf.h  usbpd_gui_memmap.h
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Demo/STM32CubeIDE/: .cproject  .project  STM32H573IITX_FLASH.ld
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Demo/Src/: app_threadx.c  main.c  resources.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Modules/about/: app_about.c  app_about.h
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Modules/audio/: app_audio.c  app_audio.h  audio_recplay.c  audio_recplay.h
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Modules/calendar/: app_calendar.c  app_calendar.h
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Demonstration/Modules/crypto/: app_crypto.c  app_crypto.h
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/Examples/BSP/: README.md  readme.html
STM32Cube_FW_H5_V1.1.0/Projects/STM32H573I-DK/ROT_Provisioning/SM/: provisioning.bat
STM32Cube_FW_H5_V1.1.0/Utilities/Certificates/: Release_Notes.md
STM32Cube_FW_H5_V1.1.0/Utilities/PC_Software/ITSbuilder/: LICENSE.txt  Release_Notes.md
cmake/stm32/: common.cmake  devices.cmake  utilities.cmake
src/: FreeRTOSConfig.h  adcdma.cpp  clock.cpp  freertos_hooks.c  hooks.c  init.cpp  interrupts.c  lcd.cpp  lv_conf.h  main.cpp  pico.ld  sdcard.cpp  sdcard.h  spi.cpp  spi.h  stm32h5xx_hal_conf.h  syscalls.c  timebase.cpp  uart.c  uart.cpp  ui.cpp  util.cpp  util.h
(+111 files in other folders)
